--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 
     <!-- CSS -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.2.1/material.deep_purple-deep_orange.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.green-teal.min.css" />
     <link rel="stylesheet" href="static/styles/login.css">
 
   </head>
